2009-07-16  Stephane Delcroix  <sdelcroix@novell.com>

	* tilesource.h|cpp, multiscleimage.h|cpp: invalidate the full msi cache
	on tilesource InvalidateTileLayer ().

2009-07-16  Jackson Harper  <jackson@ximian.com>

	* xaml.cpp: Remove some dead code.

2009-07-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* deployment.h: DeploymentStack: Added to ease push/pop current
	deployment when calling into a browser.

2009-07-15  Chris Toshok  <toshok@ximian.com>

	* clock.h|cpp (Clock::CalculateFillTime): split this out from
	Clock::Begin since we can seek on a clock that hasn't actually hit
	Clock::Begin yet.
	(Clock::Begin): call CalculateFillTime.
	(Clock::UpdateFromParentTime): change our calculations slightly
	for what localTime is in the face of a seek, and update
	progress/localtime even when stopped.  Also, call
	CalculateFillTime if we're seeking on a clock that hasn't started,
	to make sure we get the proper progress.
	(Clock::Seek): don't apply the SpeedRatio here, we do it in
	UpdateFromParentTime.

	* animation.h|cpp (AnimationStorage::GetStopValue): remove, it's
	never used.
	(AnimationStorage::UpdatePropertyValue): pass the stopValue or
	baseValue as the defaultDestinationValue to
	AnimationClock::GetCurrentValue.
	(AnimationStorage::ResetPropertyValue): use ?: instead of if+else.
	(DoubleAnimation::GetCurrentValue): if there's a correctly typed
	defaultDestinationValue, use that before the base case of end =
	start.
	(ColorAnimation::GetCurrentValue): same.
	(PointAnimation::GetCurrentValue): same.

2009-07-15  Jackson Harper  <jackson@ximian.com>

	* xaml.cpp|h: Consolidate some of the data passed to
	every callback and not used much into a struct.

2009-07-15  Jeffrey Stedfast  <fejj@novell.com>

	* fontmanager.cpp (IndexFontSubdirectory): font_stream_new() can
	return NULL, so properly handle this error condition.
	(IndexFontFile): Same.
	(FontManager::OpenFontFace): Here too.
	(OpenSystemFont): Don't destroy the FcPattern until after opening