@@ -1,3 +1,9 @@
+2009-07-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
+	* audio.cpp: Underflowed: if we haven't ended and don't have any more
+	frames, we need to set the Waiting bit so that we start playing again when
+	we get more frames.
+
 2009-07-16  Stephane Delcroix  <sdelcroix@novell.com>
 
 	* tilesource.h|cpp, multiscleimage.h|cpp: invalidate the full msi cache
